Fix media size on Firefox

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ code {
 .media a {
   margin: 4px;
   flex: 1 1 auto;
+  min-width: 0;
 }
 
 .media img {
